--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "lint": "eslint 'src/**/*.js' || true",
-    "prettify": "prettier --write 'src/**/*.js'"
+    "prettify": "prettier --write 'src/**/*.js'",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "webpack",
@@ -36,21 +37,22 @@
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
+    "pug": "^3.0.2",
+    "pug-loader": "^2.4.0",
     "sass": "^1.43.5",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0",
-    "pug": "^3.0.2",
-    "pug-loader": "^2.4.0"
+    "webpack-merge": "^5.8.0"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:taniarascia/webpack-boilerplate"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "muicss": "^0.10.3"
   }
 }
