--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "glob": "^7.2.0",
+    "jquery": "^3.6.0",
     "muicss": "^0.10.3"
   }
 }
