--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
     "gh-pages": "^3.2.3",
     "glob": "^7.2.0",
     "jquery": "^3.6.0",
-    "muicss": "^0.10.3"
+    "material-design-lite": "^1.3.0"
   }
 }
