--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "glob": "^7.2.0",
     "jquery": "^3.6.0",
