--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gh-pages": "^3.2.3",
     "glob": "^7.2.0",
     "jquery": "^3.6.0",
-    "material-design-lite": "^1.3.0"
+    "material-design-lite": "^1.3.0",
+    "scrollmagic": "^2.0.8"
   }
 }
