--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "glob": "^7.2.0",
     "jquery": "^3.6.0",
     "material-design-lite": "^1.3.0",
-    "scrollmagic": "^2.0.8"
+    "scrollmagic": "^2.0.8",
+    "slick-slider": "^1.8.2"
   }
 }
